# padrugsv6-mzcbuf

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  backend-deploy.yml  web-ci.yml  web-deploy.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/cloudformation/: ecs.yml  monitoring.yml  rds.yml  security.yml  vpc.yml
infrastructure/docker/: backend.dockerfile  docker-compose.yml  nginx.conf  web.dockerfile
infrastructure/scripts/: backup.sh  deploy.sh  monitoring.sh  security.sh
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  (+1 more)
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
src/backend/src/: __init__.py  main.py
src/backend/src/ai/: __init__.py  claude_client.py  criteria_matcher.py  evidence_analyzer.py  models.py
src/backend/src/api/: __init__.py  dependencies.py  error_handlers.py  middleware.py
src/backend/src/api/routes/: __init__.py  auth.py  clinical.py  documents.py  fhir.py  formulary.py  health.py  notifications.py  policies.py  prior_auth.py
src/backend/src/api/schemas/: __init__.py  clinical.py  documents.py  fhir.py  formulary.py  notifications.py  policies.py  prior_auth.py  responses.py
src/backend/src/config/: __init__.py  aws.py  database.py  logging.py  security.py  settings.py
src/backend/src/core/: __init__.py  auth.py  cache.py  constants.py  exceptions.py  logging.py  security.py  utils.py
src/backend/src/db/: __init__.py  base.py
src/backend/src/db/migrations/: README.md  env.py  script.py.mako
src/backend/src/db/models/: __init__.py  clinical.py  documents.py  formulary.py  notifications.py  policies.py  prior_auth.py  users.py
src/backend/src/db/repositories/: __init__.py  clinical.py  documents.py  formulary.py  notifications.py  policies.py  prior_auth.py  users.py
src/backend/src/fhir/: __init__.py  adapters.py  client.py  converters.py  models.py  validators.py
src/backend/src/integrations/: __init__.py  drug_database.py  emr.py  payer.py
src/backend/src/services/: __init__.py  clinical.py  documents.py  email.py  formulary.py  notifications.py  policies.py  prior_auth.py  users.py
src/backend/src/workers/: __init__.py  celery.py
src/backend/src/workers/tasks/: __init__.py  clinical.py  documents.py  notifications.py  prior_auth.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: __init__.py  test_ai.py  test_fhir.py  test_integrations.py  test_prior_auth.py
src/backend/tests/unit/: __init__.py  test_api.py  test_models.py  test_repositories.py  test_services.py
(+172 files in other folders)
